infra/k8s/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: functions
  namespace: homelab
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: functions
  template:
    metadata:
      labels:
        app: functions
    spec:
      containers:
        - name: functions
          image: localhost:30500/homelab/functions:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 3
            periodSeconds: 5
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
---
apiVersion: v1
kind: Service
metadata:
  name: functions
  namespace: homelab
spec:
  selector:
    app: functions
  ports:
    - port: 3000
      targetPort: 3000
